--- a/project/myCrossing/src/app/cat-sueno/cat-sueno.component.html
+++ b/project/myCrossing/src/app/cat-sueno/cat-sueno.component.html
@@ -7,9 +7,12 @@
         <h1>Catálogo de sueños</h1>
       </div>
       <div id="wrap-filtros" class="flex-centered" style="padding: 1vw 0;">
-        <input [formControl]="busqueda" class="text-input" type="text" placeholder="Buscar" [style.width]="this._verif.user == null ? '50%' : '30%'">
+        Usuario:
+        <input style="margin-left: 3vw;" [formControl]="busqueda" class="text-input" type="text" placeholder="Buscar" [style.width]="this._verif.user == null ? '50%' : '30%'">
         <ng-container *ngIf="suenoUsuario!=null">
-        <button><img style="width: 2vw;" src="../../assets/images/corazon.png"></button>
+          <div (click)="filtroLikes=!filtroLikes" style="cursor: pointer; margin-left: 2vw; padding-left: 2vw; padding-right: 2vw; border-radius: 1vw;" [style.background-color]="filtroLikes?'#69ab69':'#df5959'">
+            <button class="boton-imagen" style="background-image: url(../../assets/images/corazon.png);"></button>
+          </div>
           <button (click)="levantaPerfil()" style="margin-left: 4vw" class="boton-alargado b-azul">Mi sueño</button>
         </ng-container>
       </div>
@@ -23,8 +26,8 @@
     <div class="pag-menu flex-centered">
       <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
 
-      <ng-container *ngIf="this.getPaginas(listaItems| filtroSuenos:nameFilter).length < 25; else paginacionComprimida">
-        <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter)">
+      <ng-container *ngIf="this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length < 25; else paginacionComprimida">
+        <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes)">
           <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
       </ng-container>
@@ -32,59 +35,60 @@
       <ng-template #paginacionComprimida>
         <!-- Paginacion start -->
         <ng-container *ngIf="page_number < 11">
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(0, 11)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(0, 11)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 2, this.getPaginas(listaItems| filtroSuenos:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 2, this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length)">
             <button class="b-darkBlue b-pag" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
         <!-- Paginacion mid -->
-        <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 10">
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(0, 2)">
+        <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 10">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(0, 2)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(page_number-4, page_number+3)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(page_number-4, page_number+3)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 2, this.getPaginas(listaItems| filtroSuenos:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 2, this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length)">
             <button class="b-darkBlue b-pag" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
         <!-- Paginacion end -->
-        <ng-container #midOfin *ngIf="this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 11 < page_number">
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(0, 2)">
+        <ng-container #midOfin *ngIf="this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 11 < page_number">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(0, 2)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 12, this.getPaginas(listaItems| filtroSuenos:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 12, this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
       </ng-template>
 
-      <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems| filtroSuenos:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
+      <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
     </div>
 
     <!-- Grid -->
     <div class="grid-w-gap" style="margin: 1vw 0">
-        <ng-container *ngFor="let item of listaItems| filtroSuenos:nameFilter | paginacion:page_number:max_items">
+        <ng-container *ngFor="let item of listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes | paginacion:page_number:max_items">
           <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
+            <div (click)="darLike(item.codigo_sueno)" [style.background-color]="(_verif.user==null || !misLikes.includes(item.codigo_sueno))?'#df5959':'#69ab69'" [style.cursor]="_verif.user!=null?'pointer':'default'" style="padding-right: 1vw; padding-left: 1vw;border-radius: 1vw; border-style: solid; border-color: blanchedalmond;">{{item.likes}}<img src="../../assets/images/corazon.png" style="width: 1.5vw;"></div>
             <img [id]='item.nombre.replace(" ", "")' [src]="eligeFoto(item)" style="width: 7vw; height: 7vw;">
             <div style="display: flex; position: absolute">
               <ng-container *ngIf="item.foto2!=null && item.foto2!=''">
-                <div (click)="getImage(item,false)" style="position: relative; bottom: 4vw;right: 4vw;" class="boton-alargado b-azul"><</div>
-                <div (click)="getImage(item,true)" style="position: relative; bottom: 4vw;left: 4vw" class="boton-alargado b-azul">></div>
+                <div (click)="getImage(item,false)" style="position: relative; bottom: 3vw;right: 4vw;" class="boton-alargado b-azul"><</div>
+                <div (click)="getImage(item,true)" style="position: relative; bottom: 3vw;left: 4vw" class="boton-alargado b-azul">></div>
               </ng-container>
             </div>
             <span style="margin-top: 1vw; font-size: 2vw;">{{item.isla}}</span>
@@ -97,7 +101,7 @@
         </ng-container>
     </div>
 
-    <ng-container *ngIf="(listaItems| filtroSuenos:nameFilter | paginacion:page_number:max_items).length == 0" >
+    <ng-container *ngIf="(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes | paginacion:page_number:max_items).length == 0" >
       <div class="flex-column-centered no-result" style="margin: 3% 0">
         <img src="../../assets/images/error.png" style="width: 10vw;">
         <p><strong>No hubo resultados</strong></p>
@@ -105,11 +109,11 @@
     </ng-container>
 
     <!-- Paginacion abajo -->
-    <div class="pag-menu flex-centered" [style.padding-top]="(listaItems| filtroSuenos:nameFilter | paginacion:page_number:max_items).length < 6 ? '18vw' : '0' ">
+    <div class="pag-menu flex-centered" [style.padding-top]="(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes | paginacion:page_number:max_items).length < 6 ? '18vw' : '0' ">
       <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
 
-      <ng-container *ngIf="this.getPaginas(listaItems| filtroSuenos:nameFilter).length < 25; else paginacionComprimida">
-        <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter)">
+      <ng-container *ngIf="this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length < 25; else paginacionComprimida">
+        <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes)">
           <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
       </ng-container>
@@ -117,48 +121,48 @@
       <ng-template #paginacionComprimida>
         <!-- Paginacion start -->
         <ng-container *ngIf="page_number < 11">
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(0, 11)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(0, 11)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 2, this.getPaginas(listaItems| filtroSuenos:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 2, this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length)">
             <button class="b-darkBlue b-pag" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
         <!-- Paginacion mid -->
-        <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 10">
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(0, 2)">
+        <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 10">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(0, 2)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(page_number-4, page_number+3)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(page_number-4, page_number+3)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 2, this.getPaginas(listaItems| filtroSuenos:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 2, this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length)">
             <button class="b-darkBlue b-pag" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
         <!-- Paginacion end -->
-        <ng-container #midOfin *ngIf="this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 11 < page_number">
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(0, 2)">
+        <ng-container #midOfin *ngIf="this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 11 < page_number">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(0, 2)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
-          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter).length - 12, this.getPaginas(listaItems| filtroSuenos:nameFilter).length)">
+          <ng-container *ngFor="let pag of this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).slice(this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length - 12, this.getPaginas(listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length)">
             <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
       </ng-template>
 
-      <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems| filtroSuenos:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
+      <button [style.visibility]="max_items < listaItems.length && page_number * max_items < (listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes).length ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaItems)"> > </button>
     </div>
 
   </div>
