--- a/project/myCrossing/src/app/perfil/album/album.component.html
+++ b/project/myCrossing/src/app/perfil/album/album.component.html
@@ -1,6 +1,6 @@
 <div class="container-album">
     <div class="container-main-photo" [style]="mostrado==null ? 'background-color: #bfdefb' : ''">
-        <ng-container *ngIf="mostrado!=null">
+        <ng-container *ngIf="mostrado!=null || mostrado != ''">
             <img [src]="preview == '' ? mostrado : preview" class="full-image">
         </ng-container>
         <ng-container *ngIf="mostrado==null || mostrado==''">
@@ -45,13 +45,17 @@
 </div>
 <div id="modalConfirmaBorradoImagen" class="container-panel" (click)="cierraModales()" style="display: none; text-align: -webkit-center;">
     <div class="panel" (click)="paraPropagacion($event)">
-      <h2>Mi sueño</h2>
+      <h3>Mi sueño</h3>
       <div>
         <p>
-            ¿Esta foto pertenece a su sueño, si la elimina aqui también se eliminará de su sueño, desea continuar?
+          La foto que vas a eliminar está siendo usada actualmente en tu sueño. Si la eliminas, también se eliminará del sueño.
+          <br><br>
+          ¿Deseas continuar?
         </p>
-        <button class="boton-imagen delete" style="background-image: url('../../assets/images/excluido-rojo.png')" (click)="cancelarBorrar()"></button>
-        <button class="boton-imagen save" (click)="borrarImagen()"></button>
+        <div style="width: 20%" class="flex-between">
+          <button class="boton-imagen delete b-scale-xl" style="width:1.5vw; height: 1.5vw;background-image: url('../../assets/images/cerrar.png')" (click)="cancelarBorrar()"></button>
+          <button class="boton-imagen save b-scale-xl" (click)="borrarImagen()"></button>
+        </div>
       </div>
     </div>
   </div>
