--- a/project/myCrossing/src/app/perfil/misvecinos/misvecinos.component.css
+++ b/project/myCrossing/src/app/perfil/misvecinos/misvecinos.component.css
@@ -56,6 +56,14 @@ p, span, li, h4{
 .amistad{
   background-image: url("../../../assets/images/corazon.png");
   filter: drop-shadow(2px -1px 0 #F7F3E8) drop-shadow(-2px 0px 0 #F7F3E8) drop-shadow(1px 2px 0 #F7F3E8);
+  position: relative;
+}
+
+.amistad span{
+  position: absolute;
+  top: 15%;
+  left: 33%;
+  color: white;
 }
 
 #editar{
