--- a/project/myCrossing/src/app/cat-sueno/cat-sueno.component.html
+++ b/project/myCrossing/src/app/cat-sueno/cat-sueno.component.html
@@ -8,12 +8,10 @@
       </div>
       <div id="wrap-filtros" class="flex-centered" style="padding: 1vw 0;">
         <input style="margin-left: 3vw;" [formControl]="busqueda" class="text-input" type="text" placeholder="Buscar" [style.width]="this._verif.user == null ? '50%' : '30%'">
-        <ng-container *ngIf="suenoUsuario!=null">
-          <div (click)="filtroLikes=!filtroLikes" style="cursor: pointer; margin-left: 2vw; padding-left: 2vw; padding-right: 2vw; border-radius: 1vw;" [style.background-color]="filtroLikes?'#69ab69':'#df5959'">
-            <button class="boton-imagen" style="background-image: url(../../assets/images/corazon.png);"></button>
-          </div>
+        <ng-container *ngIf="this._verif.user!=null">
+          <button (click)="filtroLikes=!filtroLikes" class="boton-alargado b-scale boton-imagen botonCorazon" [class]="filtroLikes ? 'b-verde' : 'b-azul-hover'" style="background-image: url(../../assets/images/corazon.png);"></button>
+          <button (click)="levantaPerfil()" style="position: absolute;right: 2vw;" class="boton-alargado b-azul-hover b-scale">Mi sueño</button>
         </ng-container>
-        <button (click)="levantaPerfil()" style="margin-left: 4vw" class="boton-alargado b-azul">Mi sueño</button>
       </div>
     </div>
   </div>
@@ -83,9 +81,9 @@
         <ng-container *ngFor="let item of listaItems| filtroSuenos:nameFilter | filtroLikes:filtroLikes:misLikes | paginacion:page_number:max_items">
           <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
 
-            <div (click)="darLike(item.codigo_sueno)" class="likeWrap" [style.cursor]="_verif.user!=null?'pointer':'default'">
+            <div class="likeWrap" [style.cursor]="_verif.user!=null ? 'pointer' : 'default'">
               <span>{{item.likes}}</span>
-              <img [src]="(_verif.user==null || !misLikes.includes(item.codigo_sueno)) ? '../../assets/images/corazon-vacio.png' : '../../assets/images/corazon.png'" style="width: 1.5vw;">
+              <img (click)="darLike(item.codigo_sueno)" [src]="(_verif.user==null || !misLikes.includes(item.codigo_sueno)) ? '../../assets/images/corazon-vacio.png' : '../../assets/images/corazon.png'" class="b-scale" style="width: 1.5vw;">
             </div>
 
             <div class="flex-centered w100" style="margin: 1vw 0; justify-content: space-evenly;">
@@ -186,20 +184,20 @@
       <label for="inputCodigoSuenoCrear" style="padding-right: 1.5vw;">Codigo de sueño</label>
       <input id="inputCodigoSuenoCrear" class="text-input" placeholder="DA-1234-1234-1234" style="font-size: 1.2vw;width:35%" type="text">
       <br>
-      <p style="margin-top: 3vw;">
+      <p style="font-size: 1.2rem;">
         Selecciona entre una y tres fotos
       </p>
       <div class="lista">
         <ng-container *ngFor="let foto of fotos">
           <div style="margin-right: 2vw;" class="elementList">
             <div class="imagenWrap" [style.background-color]="fotosSeleccionadas.includes(foto)? 'rgb(174, 253, 180)':''">
-              <button class="boton-imagen b-scale" style="height: 4vw; width: 6vw;" name="seleccionaFoto" (click)="agregaFoto(foto)" [style.background-image]="'url('+foto+')'"></button>
+              <button class="boton-imagen b-scale" style="height: 4vw; width: 6vw;" name="seleccionaFoto" (click)="agregaFoto(foto)" [style.transform]="fotosSeleccionadas.includes(foto) ? 'scale(1.1)' : ''" [style.background-image]="'url('+foto+')'"></button>
             </div>
           </div>
         </ng-container>
       </div>
-      <span id="erroresSuenoCrear" style="color: #ff7673; font-size: 1.4vw;"></span>
-      <div class="flex-centered" id="botones">
+      <span id="erroresSuenoCrear" style="color: #ff7673; font-size: 1.2rem;"></span>
+      <div class="flex-centered" id="botones" style="justify-content: center;">
         <button class="boton-imagen save b-scale-xl" (click)="crearSueno()"></button>
       </div>
   </div>
@@ -207,26 +205,26 @@
 
 <div id="modalMiSueno" class="container-panel" (click)="cierraModales()" style="display: none;">
   <div class="panel" (click)="paraPropagacion($event)">
-    <h3>Mi sueño</h3>
+    <h2 style="margin-top:0">Mi sueño</h2>
     <div id="suenoEditDelete">
       <label for="inputCodigoSuenoEdit" style="padding-right: 1.5vw;">Codigo de sueño</label>
       <input id="inputCodigoSuenoEdit" class="text-input" style="font-size: 1.2vw;width:35%" type="text">
       <br>
-      <p style="margin-top: 3vw;">
+      <p style="font-size: 1.2rem">
         Selecciona entre una y tres fotos
       </p>
       <div class="lista">
         <ng-container *ngFor="let foto of fotos">
           <div style="margin-right: 2vw;" class="elementList">
             <div class="imagenWrap" [style.background-color]="fotosSeleccionadas.includes(foto)?'rgb(174, 253, 180)':''">
-              <button class="boton-imagen b-scale" style="height: 4vw; width: 6vw;" name="seleccionaFoto" (click)="agregaFoto(foto)" [style.background-image]="'url('+foto+')'"></button>
+              <button class="boton-imagen b-scale" style="height: 4vw; width: 6vw;" name="seleccionaFoto" (click)="agregaFoto(foto)" [style.transform]="fotosSeleccionadas.includes(foto) ? 'scale(1.1)' : ''" [style.background-image]="'url('+foto+')'"></button>
             </div>
           </div>
         </ng-container>
       </div>
-      <span id="erroresSuenoEdit" style="color: #ff7673; font-size: 1.4vw;"></span>
+      <span id="erroresSuenoEdit" style="color: #ff7673; font-size: 1.2rem;"></span>
       <div class="flex-centered" id="botones">
-        <button class="boton-imagen delete b-scale-xl" (click)="pedirBorrar()"></button>
+        <button class="boton-imagen delete b-scale" (click)="pedirBorrar()"></button>
         <button class="boton-imagen save b-scale-xl" (click)="guardarSueno()"></button>
       </div>
     </div>
@@ -234,8 +232,10 @@
       <p>
         ¿Seguro que desea eliminar su sueño?
       </p>
-      <button class="boton-imagen delete b-scale-xl" style="background-image: url('../../assets/images/excluido-rojo.png')" (click)="cancelarBorrar()"></button>
-      <button class="boton-imagen save b-scale-xl" (click)="borrarSueno()"></button>
+      <div id="botones">
+        <button class="boton-imagen delete b-scale-xl" style="width:1.5vw; height: 1.5vw;background-image: url('../../assets/images/cerrar.png')" (click)="cancelarBorrar()"></button>
+        <button class="boton-imagen save b-scale-xl" (click)="borrarSueno()"></button>
+      </div>
     </div>
   </div>
 </div>
