--- a/project/myCrossing/src/app/inicio/inicio.component.css
+++ b/project/myCrossing/src/app/inicio/inicio.component.css
@@ -1,7 +1,7 @@
 .dv-inicio{
   min-height: fit-content;
   padding: 2vw 0;
-  background-color: #fffbe1;
+  background-color: #f7f3e8;
 }
 
 #dv-header{
