--- a/project/myCrossing/src/app/calc-nabos/calc-nabos.component.css
+++ b/project/myCrossing/src/app/calc-nabos/calc-nabos.component.css
@@ -281,6 +281,10 @@ h1 {
   padding-bottom: 7rem;
 }
 
+.patron-tag:hover p{
+  padding-top: 1rem;
+}
+
 .patron-tag{
   margin: 1vw 0;
   border-radius: 20px;
