fix: Arreglos menores

--- a/project/myCrossing/src/app/cat-sueno/cat-sueno.component.html
+++ b/project/myCrossing/src/app/cat-sueno/cat-sueno.component.html
@@ -98,7 +98,7 @@
               </ng-container>
             </div>
 
-            <div>
+            <div style="text-align: center;">
               <h2 style="margin: 0">{{item.isla}}</h2>
               <span style="font-size: unset;">{{item.codigo_sueno}}</span>
             </div>
