--- a/project/my-crossing/src/app/calc-nabos/calc-nabos.component.html
+++ b/project/my-crossing/src/app/calc-nabos/calc-nabos.component.html
@@ -1,4 +1,4 @@
-<div class="flex-column-centered padding-nav" style="background-image: url('../../assets/images/plaza-ayto-blur.jpg');">
+<div class="flex-column-centered padding-nav" style="background-image: url('../../assets/images/plaza-ayto-blur.jpg');background-size: contain;">
   <div class="burbuja-title" style="margin: 3rem auto 1rem">
     <h1>Mercado de nabos</h1>
   </div>
