--- a/project/my-crossing/src/app/cazar-ahora/cat-caza-criaturas-marinas/cat-caza-criaturas-marinas.component.css
+++ b/project/my-crossing/src/app/cazar-ahora/cat-caza-criaturas-marinas/cat-caza-criaturas-marinas.component.css
@@ -171,8 +171,6 @@ span{
   }
 
   .editar-top-left{
-    top: 15vw;
-    right: unset;
     left:1vw;
   }
 
@@ -202,6 +200,7 @@ span{
     background-color: #b8b9ff;
     border-radius: 50px;
     box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+    position: relative;
   }
 
   #filtro-sombra > button, #filtro-velocidad > button, #filtro-usuario > button{
