--- a/project/my-crossing/src/app/cazar-ahora/cat-caza-insectos/cat-caza-insectos.component.css
+++ b/project/my-crossing/src/app/cazar-ahora/cat-caza-insectos/cat-caza-insectos.component.css
@@ -31,6 +31,7 @@ span{
     background-color: #beffbb;
     border-radius: 50px;
     box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+    position: relative;
   }
 
   #filtro-clima > button, #filtro-lugar > button, #filtro-usuario > button{
@@ -199,8 +200,6 @@ span{
   }
 
   .editar-top-left{
-    top: 15vw;
-    right: unset;
     left: 1vw;
   }
 
