--- a/project/my-crossing/src/app/cazar-ahora/cat-caza-peces/cat-caza-peces.component.css
+++ b/project/my-crossing/src/app/cazar-ahora/cat-caza-peces/cat-caza-peces.component.css
@@ -133,6 +133,7 @@ span{
     background-color: #b5d6ff;
     border-radius: 50px;
     box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+    position: relative;
   }
 
   #filtro-sombra > button, #filtro-lugar > button, #filtro-usuario > button{
@@ -171,8 +172,6 @@ span{
   }
 
   .editar-top-left{
-    top: 15vw;
-    right: unset;
     left:1vw;
   }
 
