--- a/project/my-crossing/src/app/cal-eventos/cal-eventos.component.html
+++ b/project/my-crossing/src/app/cal-eventos/cal-eventos.component.html
@@ -1,5 +1,5 @@
 <div class="flex-column-centered padding-nav padding-footer background-img" style='background-image:  url("../../assets/images/muelle-blur.png");height: unset;'>
-    <div style="background-image: url('../../assets/images/bubble-calendario.png')">
+    <div class="burbuja-title" style="background-image: url('../../assets/images/bubble-calendario.png')">
       <h1>Calendario</h1>
     </div>
     <div class="calendario-wrap">
